[tool.poetry]
name = "hello"
version = "0.1.0"
description = "Displays a test message"
authors = ["Maksim <mvlasov1977@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
